--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,12 @@ img {
   margin: 0 auto;
   text-align: center;
   padding: 188px 0;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7)), url(../images/main-back.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  max-width: 1440px;
+  
 }
 .main-screen-title {
   font-weight: 700;
