--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,8 @@ img {
 
 .portfolio-list-item:hover .portfolio-overlay {
   transform: translateY(0);
-  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .portfolio-name {
@@ -406,6 +407,12 @@ img {
   padding: 100px 0;
 }
 
+.footer-row {
+  display: flex;
+  flex-direction: row;
+  gap: 120px;
+}
+
 .footer-logo {
   display: inline-block;
   margin-bottom: 16px;
@@ -427,4 +434,23 @@ img {
   letter-spacing: 0.02em;
   color: var(--Cloud);
   max-width: 264px;
+}
+
+.footer-social {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--White);
+  margin-bottom: 16px;
+}
+
+.social-links.footer-links {
+  gap: 16px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-links.footer-links .link:hover,
+.social-links.footer-links .link:focus {
+  background-color: var(--Green);
 }
