--- a/css/styles.css
+++ b/css/styles.css
@@ -451,9 +451,10 @@ img {
   color: var(--White);
   margin-bottom: 16px;
 }
-
+.social-links.footer-list {
+gap: 16px;
+}
 .team-social.footer-links {
-  gap: 16px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
