--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,8 @@ img {
   display: flex;
   flex-direction: row;
   align-items: baseline;
+  flex-shrink: 0;
+
 }
 
 .footer-content {
@@ -445,7 +447,7 @@ img {
   line-height: 150%;
   letter-spacing: 0.02em;
   color: var(--Cloud);
-  max-width: 264px;
+  /* max-width: 264px; */
 }
 
 .footer-social {
@@ -466,4 +468,50 @@ img {
 .team-social.footer-links .link:hover,
 .team-social.footer-links .link:focus {
   background-color: var(--Green);
+}
+
+.footer-content.form {
+  margin-right: 0;
+
+}
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+.subscribe-input {
+  padding: 8px 16px;
+  border: 1px solid var(--White);
+  border-radius: 4px;
+  background-color: transparent;
+  color: var(--White);
+  font-size: 14px;
+  line-height: 1.5;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+}
+
+.subscribe-btn {
+  display: flex;
+  align-items: center;
+  background-color: var(--Iris);
+  gap: 16px;
+  font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+text-align: center;
+color: var(--White);
+  border: none;
+  border-radius: 4px;
+  padding: 8px 24px;
+  cursor: pointer;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: var(--Ocean);
+}
+
+.icon-form {
+  fill: var(--White);
 }
