--- a/css/styles.css
+++ b/css/styles.css
@@ -670,6 +670,7 @@ img {
   clip-path: inset(50%);
   border: 0;
   overflow: hidden;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-label {
@@ -684,6 +685,7 @@ img {
   line-height: 1.16667;
   letter-spacing: 0.04em;
   color: var(--Light-Slate);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-check {
