--- a/css/styles.css
+++ b/css/styles.css
@@ -545,27 +545,6 @@ img {
   fill: var(--White);
 }
 
-/* .subscribe-input:hover {
-  border-color: var(--Iris);
-}
-.subscribe-input:focus,
-.subscribe-input:focus-visible {
-  outline: none;
-  border-color: var(--Iris);
-  color: var(--Green);
-}
-.subscribe-input:active {
-  border-color: var(--Iris);
-}
-.subscribe-input::placeholder {
-  color: var(--White);
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 2;
-  letter-spacing: 0.04em;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-} */
-
 .backdrop {
   position: fixed;
   top: 0;
@@ -592,6 +571,7 @@ img {
   border-radius: 4px;
   width: 408px;
   min-height: 584px;
+  padding: 72px 24px 24px 24px;
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12),
     0 2px 1px 0 rgba(0, 0, 0, 0.2);
   background-color: #fcfcfc;
@@ -607,21 +587,23 @@ img {
   width: 24px;
   height: 24px;
   border-radius: 50%;
-  border: 1px solid var(--Cornflower);
-  background-color: var(--Cloud);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: var(--Cornflower);
   display: flex;
   align-items: center;
   justify-content: center;
   cursor: pointer;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .icon-close {
   fill: var(--Navy-Blue);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
+  border: none;
   background-color: var(--Ocean);
   border-color: var(--Ocean);
 }
@@ -631,24 +613,27 @@ img {
 }
 .modal-title {
   font-size: 16px;
+  font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
   color: var(--Navy-Blue);
   text-align: center;
-  margin-top: 72px;
   margin-bottom: 16px;
 }
 .modal-form {
   display: flex;
   flex-direction: column;
-  gap: 8px;
-  margin: 16px 24px;
+  margin-bottom: 8px;
 }
+.form-field {
+  margin-bottom: 16px;
+}
+
 .form-label {
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--Light-Slate);
   margin-bottom: 4px;
@@ -661,10 +646,13 @@ img {
 
 .form-input {
   width: 100%;
+  height: 40px;
   padding: 8px 16px 8px 38px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   margin-bottom: 4px;
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -681,18 +669,26 @@ img {
   transform: translateY(-50%);
   fill: var(--Navy-Blue);
   pointer-events: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus + .form-icon {
   fill: var(--Iris);
 }
 .form-textarea {
   width: 100%;
-  height: 100px;
+  height: 120px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   padding: 8px 16px;
   resize: none;
   color: var(--Navy-Blue);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  background-color: transparent;
+  outline: transparent;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -713,11 +709,11 @@ img {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-top: 16px;
+  margin-bottom: 24px;
 }
 
 .checkbox-input {
-  display: inline-flex;
+  display: block;
   position: absolute;
   opacity: 0;
   width: 1px;
@@ -740,14 +736,15 @@ img {
   color: var(--White);
   font-weight: 400;
   font-size: 12px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.04em;
   color: var(--Light-Slate);
+  fill: transparent; 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-form-check {
-  display: flex;
+  display: inline-flex;
   justify-content: center;
   align-items: center;
   width: 16px;
@@ -755,6 +752,9 @@ img {
   border-radius: 2px;
   border: 1px solid var(--navy-blue-modal);
   background-color: transparent;
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-check {
@@ -771,8 +771,9 @@ img {
 
 /* Checked */
 .checkbox-input:checked + .checkbox-label > .modal-form-check {
-  background-color: var(--Iris);
-  border-color: var(--Iris);
+  background-color: var(--Ocean);
+  fill: var(--Cloud);
+  border: none;
 }
 
 .checkbox-input:checked + .checkbox-label > .modal-form-check .modal-check {
@@ -795,12 +796,11 @@ img {
 .submit-btn {
   display: block;
   margin: 0 auto;
-  margin-top: 24px;
   background-color: var(--Iris);
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
-  width: 169px;
+  min-width: 169px;
   cursor: pointer;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
   font-weight: 500;
