--- a/css/styles.css
+++ b/css/styles.css
@@ -682,6 +682,10 @@ img {
 .form-input:focus + .form-icon {
   fill: var(--Iris);
 }
+.form-field.textarea {
+  margin-bottom: 16px;
+}
+
 .form-textarea {
   width: 100%;
   height: 120px;
